center image padding chrome issue fixed

--- a/test.html.haml
+++ b/test.html.haml
@@ -17,9 +17,6 @@
       table{
         width: 100%;
       }
-      td{
-        border: solid;
-      }
       table.footer_table{
         text-align: center;
         width: 850px;
@@ -59,14 +56,6 @@
         background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
         background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #98D72B 120%) repeat scroll 0 0 #98D72B;
       }
-      .center_container{
-        -# background: rgb(152, 215, 43);
-        -# background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-        -# background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(152, 215, 43) 38%);
-      }
       .right{
         margin-top: 200px;
         padding-right: 60px;
@@ -84,8 +73,10 @@
       .center_footer{
         padding-bottom: 50px;
       }
-      td.imagebox{
-
+      .center_upper_imagebox{
+        padding-left: 220px;
+        height: 240px;
+        max-height: 240px;
       }
     %table
       %tr
@@ -143,5 +134,3 @@
         %td.right_main_table
           .right_container
             %h1
-
-        -# background-image: -webkit-gradient(radial, 114 40%, 0, 114 40%, 133, color-stop(0%, rgba(0, 229, 43, 0)), color-stop(38%, rgb(108, 229, 27)));
