removed local image links

--- a/test.html.haml
+++ b/test.html.haml
@@ -8,6 +8,7 @@
       hr{
         width: 90%;
         margin-left: 40px;
+        color: black;
       }
       body{
         margin: 0px;
@@ -82,7 +83,7 @@
                 %tr
                   %td.imagebox{:height => "500px"}
                     .center_upper_imagebox
-                      %img.center_image{:src => "<image link goes here>", :alt => "central image"}
+                      %img.center_image{:src => "<image link goes here>", :alt => "new updated price image: large"}
             .center_mid
               %table.text_logo_table
                 %col{:width => "1500"}
