fixed be independent

--- a/test.html.haml
+++ b/test.html.haml
@@ -83,30 +83,29 @@
                 %tr
                   %td.imagebox{:height => "500px"}
                     .center_upper_imagebox
-                      %img.center_image{:src => "<image link goes here>", :alt => "new updated price image: large"}
+                      %img.center_image{:src => "http://www.olacabs.com/img/campaigns/large_center_image.png", :alt => "new updated price image: large"}
             .center_mid
               %table.text_logo_table
-                %col{:width => "1500"}
-                  %col{:width => "100"}
-                    %tr
-                      %td
-                        .left
-                          .huge_text
-                            Airfare Up.
-                          .huge_text
-                            Cab fare down.
-                          .text_area.larger
-                            Banglore airport transfer for only Rs.500/-
-                          .text_area.larger
-                            To Book a cab  call 3355 3355
-                          .text_area.larger
-                            Use code Airport500
-                      %td{:align => "center"}
-                        .right
-                          %a{:href => "http://www.olacabs.com"}
-                            %img{:src => "<image link goes here>", :alt => "Ola cabs logo", :id => "logo"}
-                          %span.logo_text
-                            Be independent
+                %tr
+                  %td
+                    .left
+                      .huge_text
+                        Airfare Up.
+                      .huge_text
+                        Cab fare down.
+                      .text_area.larger
+                        Banglore airport transfer for only Rs.500/-
+                      .text_area.larger
+                        To Book a cab  call 3355 3355
+                      .text_area.larger
+                        Use code Airport500
+                  %td{:align => "center"}
+                    .right
+                      %a{:href => "http://www.olacabs.com"}
+                        %img{:src => "http://www.olacabs.com/img/campaigns/olacabs_final_logo.png", :alt => "Ola cabs logo", :id => "logo"}
+                      %span.logo_text
+                        %br
+                          Be independent
             %hr      
             .center_footer
               %table.footer_table
@@ -119,10 +118,10 @@
                     Download the app from
                   %td{:cellpadding => "50px"}
                     %a{:href => "https://play.google.com/store/apps/details?id=com.olacabs.customer&hl=en"}
-                      %img.play_store{:src => "<image link goes here>", :alt => "google play logo"}
+                      %img.play_store{:src => "http://www.olacabs.com/img/campaigns/google_play.png", :alt => "google play logo"}
                   %td
                     %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
-                      %img.app_store{:src => "<image link goes here>", :alt => "apple app store logo"}
+                      %img.app_store{:src => "http://www.olacabs.com/img/campaigns/app_store.png", :alt => "apple app store logo"}
 
         %td.right_main_table
           .right_container
