image links added again

--- a/test.html.haml
+++ b/test.html.haml
@@ -27,17 +27,19 @@
         height: 100px;
         background: transparent;
       }
-
-      img{
-        height: 80px;
-      }
       img.app_store{
+        height: 80px;
         max-height: 30px;
         max-width: 130px;
       }
       img.play_store{
+        height: 80px;
         max-height: 30px;
         max-width: 130px;
+      }
+      img.ola_logo{
+        height: 80px;
+        max-height: 80px;
       }
       td.center_main_table{
 
@@ -75,9 +77,7 @@
         padding-bottom: 50px;
       }
       .center_upper_imagebox{
-        padding-left: 220px;
-        height: 240px;
-        max-height: 240px;
+        padding-left: 280px;
       }
     %table
       %tr
