fixed height and width dimensions

--- a/test.html.haml
+++ b/test.html.haml
@@ -6,9 +6,9 @@
         margin: 0px;
       }
       hr{
-        width: 90%;
-        margin-left: 40px;
-        color: black;
+        width: 98%;
+        color: #000;
+        background-color: #000;
       }
       body{
         margin: 0px;
@@ -21,25 +21,10 @@
       table.footer_table{
         text-align: center;
         width: 850px;
-        padding-left: 40px;
       }
       table.text_logo_table{
         height: 100px;
         background: transparent;
-      }
-      img.app_store{
-        height: 80px;
-        max-height: 30px;
-        max-width: 130px;
-      }
-      img.play_store{
-        height: 80px;
-        max-height: 30px;
-        max-width: 130px;
-      }
-      img.ola_logo{
-        height: 80px;
-        max-height: 80px;
       }
       td.center_main_table{
 
@@ -67,10 +52,10 @@
         padding-left: 50px;
       }
       .huge_text{
-        font-size: 4em;
+        font-size: 3em;
       }
       .text_area.larger{
-        font-size: 1.6em;
+        font-size: 1.5em;
         padding-top: 15px;
       }
       .center_footer{
@@ -85,12 +70,12 @@
           .left_container
             %h1
 
-        %td.center_main_table{:width => "900px"}
+        %td.center_main_table{:width => "650px"}
           .center_container
             .center_upper
               %table.center_upper_table
                 %tr
-                  %td.imagebox{:height => "500px"}
+                  %td.imagebox{:height => "300px"}
                     .center_upper_imagebox
                       %img.center_image{:src => "image_path", :alt => "center logo image"}
             .center_mid
