--- a/test.html.haml
+++ b/test.html.haml
@@ -17,7 +17,7 @@
       }
       table{
         width: 100%;
-      }
+      }      
       table.footer_table{
         text-align: center;
         width: 850px;
@@ -25,6 +25,11 @@
       table.text_logo_table{
         height: 100px;
         background: transparent;
+      }
+      span.terms{
+        float: right;
+        padding: 5px;
+        font-size: 0.9em;
       }
       td.center_main_table{
         background: rgb(152, 215, 43);
@@ -108,6 +113,9 @@
                   %td
                     %a{:href => "http://itunes.apple.com/in/app/ola-cabs/id539179365?mt=8"}
                       %img.app_store{:src => "http://www.olacabs.com/img/campaigns/app_store.png", :alt => "apple app store logo"}
+              %span.terms
+                *T&C apply
+                        
 
         %td.right_main_table
           .right_container
