added T&C in footer

--- a/test.html.haml
+++ b/test.html.haml
@@ -17,7 +17,7 @@
       }
       table{
         width: 100%;
-      }
+      }      
       table.footer_table{
         text-align: center;
         width: 850px;
@@ -25,6 +25,11 @@
       table.text_logo_table{
         height: 100px;
         background: transparent;
+      }
+      span.terms{
+        float: right;
+        padding: 5px;
+        font-size: 0.9em;
       }
       td.center_main_table{
 
