--- a/test.html.haml
+++ b/test.html.haml
@@ -14,7 +14,7 @@
         margin: 0px;
         padding: 0px;
         font-size: 1.3em;
-        font-family: stag-sans, arial;
+        font-family: 'stag sans', arial;
       }
       table{
         width: 100%;
