--- a/test.html.haml
+++ b/test.html.haml
@@ -1,3 +1,4 @@
+!!!
 %html{"xml:lang" => "en", :xmlns => "http://www.w3.org/1999/xhtml"}
   %body  
     :css
@@ -80,8 +81,8 @@
           .left_container
             %h1
 
-        %td.center_main_table{:width => "650px"}
-          .center_container
+        %td.center_main_table{:width => "650px", :style => "background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')"}
+          .center_container{ :style => "background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')" }
             .center_upper
               %table.center_upper_table
                 %tr
