--- a/test.html.haml
+++ b/test.html.haml
@@ -28,10 +28,10 @@
         height: 100px;
         background: transparent;
       }
-      span.terms{
-        float: right;
+      .terms{
         padding: 5px;
         font-size: 0.9em;
+        margin-left: 750px;
       }
       span.logo_text{
         font-size: 0.8em;
@@ -81,7 +81,7 @@
           .left_container
             %h1
 
-        %td.center_main_table{:width => "650px", :style => "background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')"}
+        %td.center_main_table{:width => "650px"}
           .center_container{ :style => "background-image: url('http://www.olacabs.com/img/campaigns/back_gradient.jpg')" }
             .center_upper
               %table.center_upper_table
