--- a/test.html.haml
+++ b/test.html.haml
@@ -42,13 +42,12 @@
         height: 130%;
       }
       .center_container{
-        background: rgb(152, 215, 43);
         background-image: -webkit-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
         background-image: -ms-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
         background-image: -o-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
         background-image: radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
         background-image: -moz-radial-gradient(50% 25%, 1140px 1040px, rgba(255, 255, 255, 255) 0%, rgb(200, 215, 36) 38%);
-        background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #C8D724 120%) repeat scroll 0 0 #C8D724;
+        background: -moz-radial-gradient(50% 25% , ellipse closest-side, #FFFFFF, #FFBB00 120%) repeat scroll 0 0 #C8D724;
       }
       .right{
         margin-top: 240px;
@@ -66,6 +65,7 @@
       }
       .center_footer{
         padding-bottom: 10px;
+        font-size: 0.6em;
       }
       .center_upper_imagebox{
         padding-left: 190px;
@@ -77,12 +77,12 @@
           .left_container
             %h1
 
-        %td.center_main_table{:width => "550px"}
-          .center_container{ :style => "background-image: url('<I used an image to get some gradient effects to appear within emails>')" }
+        %td.center_main_table{:width => "750px"}
+          .center_container
             .center_upper
               %table.center_upper_table
                 %tr
-                  %td.imagebox{:height => "300px"}
+                  %td.imagebox{:height => "500px"}
                     .center_upper_imagebox
                       %img.center_image{:src => "image_path", :alt => "center logo image"}
             .center_mid
@@ -91,15 +91,16 @@
                   %td{:width=> "900px"}
                     .left
                       .huge_text
-                        Lorem Ipsum Lorem Ipsum Lorem Ipsum 
+                        Lorem 
                       .huge_text
-                        Lorem Ipsum 
+                        Ipsum 
                       .text_area.larger
                         Lorem Ipsum Lorem Ipsum Lorem Ipsum 
                       .text_area.larger
-                        Lorem Ipsum Lorem Ipsum Lorem Ipsum 
-                      .text_area.larger
-                        Lorem Ipsum Lorem Ipsum Lorem Ipsum 
+                        %p
+                          Lorem Ipsum Lorem Ipsum Lorem Ipsum
+                        %p  
+                          Lorem Ipsum Lorem Ipsum Lorem Ipsum 
                         
                   %td{:align => "center"}
                     .right
@@ -112,15 +113,15 @@
               %table.footer_outer
                 %tr
                   %td{:width => "190px;"}
-                    lorem ipsum &nbsp;&nbsp;&nbsp;|
+                    lorem ipsum &nbsp|
                   %td{:width => "170px;"}
-                    lorem ipsum 24X7&nbsp;&nbsp;&nbsp;|
+                    lorem ipsum 24X7&nbsp;|
                   %td{:width => "190px;"}
                     lorem ipsum
-                  %td{:width => "100px;"}
+                  %td
                     %a{:href => "https://foobarbaz.com"}
                       %img.footer_image_one{:src => "image.png", :alt => "foo bar baz"}
-                  %td{:width => "100px;"}
+                  %td
                     %a{:href => "http://foobarbaz.com"}
                       %img.footer_image_two{:src => "image.png", :alt => "foo bar baz"}
 
